=============================
Change log for gocept.jasmine
=============================

0.3 (unreleased)
================

- Nothing changed yet.


0.2 (2013-08-17)
================

- Added helper function to ease test layer setup.

- Made it easier to debug jasmine tests in the browser.


0.1 (2013-08-16)
================

initial release